--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="PETS">
     <meta name="author" content="Guillermo Miranda">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets.images/icon_538b0fbdd5b8cfaa4803fa6a652dd33b.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>PETS</title>
 </head>
