--- a/desktop.html
+++ b/desktop.html
@@ -6,7 +6,7 @@
     <meta name="description" content="DESKTOP">
     <meta name="author" content="Guillermo Miranda">
     <link rel="shortcut icon" href="assets.images/icon_538b0fbdd5b8cfaa4803fa6a652dd33b.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
@@ -17,14 +17,16 @@
 </head>
 <body>
     <header>
-        <img src="assets.images/images.png" alt="icono huella de cabecera">
+        <img src="assets.images/logo2.png" alt="icono huella de cabecera">
         <nav>
             <ul>
                 <li>Home</li>
-                <li class="hidden">live Demo
-                    <li>Pets Boarding Service</li>
-                    <li></li>
-                    <li></li>
+                <li class="select">live Demo
+                    <ul>
+                        <li>Pets Boarding Service</li>
+                        <li>Pets Toys and Food Shoop</li>
+                        <li>Pets Training School</li>
+                    </ul>
                 </li>
                 <li>Live Demo Blocks</li>
                 <li>BUY NOW</li>
