--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>PETS</title>
 </head>
 <body>
-    <a href="mobile.html">MOBILE</a>
-    <a href="desktop.html">DESKTOP</a>
+    <a href="mobile.html"><img src="assets.images/logo2.png" alt="logo huella">MOBILE</a>
+    <a href="desktop.html"><img src="assets.images/logo2.png" alt="logo huella">DESKTOP</a>
 </body>
 </html>
