--- a/mobile.html
+++ b/mobile.html
@@ -6,7 +6,7 @@
     <meta name="description" content="MOBILE">
     <meta name="author" content="Guillermo Miranda">
     <link rel="shortcut icon" href="assets.images/icon_538b0fbdd5b8cfaa4803fa6a652dd33b.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
