fixing the stuff

--- a/desktop.html
+++ b/desktop.html
@@ -16,27 +16,29 @@
     <title>DESKTOP</title>
 </head>
 <body>
-    <header>
+    <header class="top">
         <img src="assets.images/logo2.png" alt="icono huella de cabecera">
         <nav>
             <ul>
                 <li>Home</li>
                 <li class="select">live Demo
                     <ul>
-                        <li>Pets Boarding Service</li>
-                        <li>Pets Toys and Food Shoop</li>
-                        <li>Pets Training School</li>
+                        <li class="boarding">Pets Boarding Service</li>
+                        <li class="toys">Pets Toys and Food Shoop</li>
+                        <li class="school">Pets Training School</li>
                     </ul>
                 </li>
                 <li>Live Demo Blocks</li>
-                <li>BUY NOW</li>
+                <li class="buy">BUY NOW</li>
             </ul>
         </nav>
     </header>
     <section>
         <header>
-            <h1></h1>
-            <h2></h2>
+            <div class="title">
+                <h1>PET ACTIVITIES</h1>
+                <h2>Take a closer look</h2>
+            </div>
         </header>
         <article></article>
         <article></article>
