--- a/desktop.html
+++ b/desktop.html
@@ -25,7 +25,7 @@
                     <ul>
                         <li class="boarding">Pets Boarding Service</li>
                         <li class="toys">Pets Toys and Food Shoop</li>
-                        <li class="school">Pets Training School</li>
+                        <li class="School">Pets Training School</li>
                     </ul>
                 </li>
                 <li>Live Demo Blocks</li>
